Nav bar added and bug where images not showing in why its cool section fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,36 @@ body {
     width: 100%;
     background: url('../images/hero-image2.jpg') no-repeat center center;
 }
-/* Don't forget to include descriptions for each css factor*/
+
+/* navigation links */
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+}
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+#menu li{
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid #fffdd0;
+}
+
+.active {
+    border-bottom: 1px solid #fffdd0;
+}
+
 /* About section*/
 .headings {
     margin-left: 175px;
@@ -44,7 +73,7 @@ body {
 #image-about {
     background: url('../images/hero-image.jpg');
     height: 300px;
-    width: 340px;
+    width: 330px;
     float: right;
     border: 1px white solid;
 }
@@ -53,9 +82,8 @@ body {
 #activities-image {
     float: right;
     height: 100px;
-    width: 50%;
-    margin-right: 50px;
-    vertical-align: center;
+    width: 60%;
+    column-gap: 0;
 }
 
 /* The Community Section */
@@ -63,3 +91,4 @@ body {
     height: 150px;
     width: 50%;
 }
+
